   "rulesetdir" command.
 - The limit on the number of nations that can be included with 
   Freeciv has been removed.
 - The format of the isometric tileset spec-files has changed.
 - The map and ai code has been cleaned up significantly.
 - Translations improved. Added better support for plural forms.
 - Several bugs squished and a lot of work done under the hood.

WHAT'S CHANGED SINCE 1.11.4

 - Internationalization extended.  Still needs improvement.
   Current localizations: de en_GB es fr hu it ja nl no pl pt pt_BR
   ro ru sv.
 - Isometric view in gtk and amiga clients using the mostly civ2-
   compatible HiRes tileset. This is on by default, but the old non-
   isometric tiles are still available by giving a --tiles argument to
   the client, fx "civclient --tiles trident".
 - While planning a goto (after hitting "g") a line will be displayed
   showing the route from the selected unit to the mouse pointer.
   Hitting "g" will insert a waypoint at the mouse pointer.
 - The server now has readline completion. This works at all levels,
   fx "cu<TAB>" completes to "cut", and if there exist a player named
   "paulz" "cut pau<TAB>" will complete to "cut paulz".
 - Players can agree to give shared vision, which means that you
   automatically see everything the other player sees.
 - Layer view menu items allow you to only display some map info on the
   main map. Fx you can choose to not show roads.
 - The server will ping all connected clients and cut off those too slow
   to respond.
 - Smarter placing of partisans.
 - The server no longer automatically starts when the maximum number of
   players have been reached.
 - If commandlevels are used and the controlling player disconnects a
   connected player can assume the "first" level with the "/firstlevel"
   command.
 - "Restrictions and Limitations" section added to the README.ruleset
 - Caravans, diplomats and spies can move into allied cities.
 - Elephants, Crusaders and Fanatics activated in civ 2 ruleset.